[project]
name = "insighta-cli"
version = "0.1.0"
description = "Insighta Labs CLI"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0"
]

[project.scripts]
insighta = "insighta.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"